@@ -2,6 +2,8 @@ WebHelpers ChangeLog
 
 0.6.2 (tip)
 * nl2br() and format-paragraphs were not literal-safe.
+* New module webhelpers.media for multimedia helpers. Currently contains
+  functions to determine the size of images and to choose a scaling factor.
 
 0.6.1 (7/31/2008)
 * Include a faster version of cgi.escape for use by the literal object.
